Updated 'faqs.html' via CloudCannon

--- a/faqs.html
+++ b/faqs.html
@@ -217,10 +217,9 @@ Perhaps most importantly, you’ll build meaningful connections with other atten
 
 <!--QUESTION-->
             <a class="_accordion slab editable">
-                Does the ticket need to match the name and details of the holder?
-            </a>
+                Can I change the details of my ticket?</a>
             <!--ANSWER-->
-            <div class="panel editable"><p>Yes! It&rsquo;s really important that each attendee has had their details recorded against a ticket. That&rsquo;s because each ticket holder will be sent a registration pack in the post and will be allocated to a program pathway based upon their location. So, if you&rsquo;ve entered the same details against multiple tickets, please <a class="blue" href="mailto:powerup@getup.org.au">email powerup@getup.org.au</a> to update</p></div>
+            <div class="panel editable"><p>Yes! If you need to change the details of your ticket please <a class="blue" href="mailto:powerup@getup.org.au">email powerup@getup.org.au</a> so we can confirm the new details.</p></div>
 
             <div class="faq-underline"></div>
 
