--- a/faqs.html
+++ b/faqs.html
@@ -228,11 +228,7 @@ Perhaps most importantly, you’ll build meaningful connections with other atten
                Can I give my ticket to someone else?
             </a>
             <!--ANSWER-->
-            <div class="panel editable">
-                <p>
-                   No problem, just <a href="mailto:powerup@getup.org.au" class="blue">email powerup@getup.org.au</a> to update the name and details attached to that ticket so we can send the new ticket holder a registration pack in the post and organise their program based upon their electorate.
-                </p>
-            </div>
+            <div class="panel editable"><p>No problem, just <a class="blue" href="mailto:powerup@getup.org.au">email powerup@getup.org.au</a> to update the name and details attached to that ticket so we can ensure the new ticket holder will have an accurate programme.</p></div>
 
             <div class="faq-underline"></div>
 
@@ -255,12 +251,7 @@ Perhaps most importantly, you’ll build meaningful connections with other atten
                Can I purchase a ticket in-person at the event?
             </a>
             <!--ANSWER-->
-            <div class="panel editable">
-                <p>
-                  Unfortunately it is not possible to purchase a ticket on the day. That’s because a lot of planning goes into assigning PowerUp attendees into workshop groups and creating personalised registration packs before the event. PowerUp is expected to be a sell-out event so if you’re keen, <a href="http://www.powerup.org.au/ticket" class="blue">buy your ticket now!</a>
-
-                </p>
-            </div>
+            <div class="panel editable"><p>Unfortunately it is not possible to purchase a ticket on the day. That&rsquo;s because a lot of planning goes into assigning PowerUp attendees into workshop groups and creating personalised programmes before the event. PowerUp is expected to be a sell-out event so if you&rsquo;re keen, <a class="blue" href="http://www.powerup.org.au/ticket">buy your ticket now!</a></p></div>
 
             <div class="faq-underline"></div>
 
