Updated 'faqs.html' via CloudCannon

--- a/faqs.html
+++ b/faqs.html
@@ -38,11 +38,7 @@ If you want to get the skills, tools and connections to make a difference and yo
                 What can I expect at PowerUp?
             </a>
             <!--ANSWER-->
-            <div class="panel editable">
-                <p>
-                    The PowerUp program has been built to maximise your opportunity to interact, connect and learn in engaging spaces. You can expect to spend about 80% of your time in small practical skills workshops, and 20% in all-in plenary spaces led by inspiring keynote speakers. There’s also plenty of breaks to stretch your legs, grab a coffee and get to know your fellow attendees outside of the formal program. Stay tuned for the full program in June.
-                </p>
-            </div>
+            <div class="panel editable"><p>The PowerUp program has been built to maximise your opportunity to interact, connect and learn in engaging spaces. You can expect to spend about 80% of your time in small practical skills workshops, and 20% in all-in plenary spaces led by inspiring keynote speakers. There&rsquo;s also plenty of breaks to stretch your legs, grab a coffee and get to know your fellow attendees outside of the formal program. Stay tuned for the full program in August.</p></div>
 
             <div class="faq-underline"></div>
 
@@ -81,11 +77,7 @@ Perhaps most importantly, you’ll build meaningful connections with other atten
                 Who will be speaking at PowerUp?
             </a>
             <!--ANSWER-->
-            <div class="panel editable">
-                <p>
-                    Some of the most impactful community organisers are lining up to speak at PowerUp. These Australian and international change-makers will bring you exclusive insights into the state of the nation and the world, and share their strategies for building the people-power to win. Stay tuned for updates in June.
-                </p>
-            </div>
+            <div class="panel editable"><p>Some of the most impactful community organisers are lining up to speak at PowerUp. These Australian and international change-makers will bring you exclusive insights into the state of the nation and the world, and share their strategies for building the people-power to win. Stay tuned for more updates in August.</p></div>
 
             <div class="faq-underline"></div>
 
