Updated 'faqs.html' via CloudCannon

--- a/faqs.html
+++ b/faqs.html
@@ -220,7 +220,7 @@ Perhaps most importantly, you’ll build meaningful connections with other atten
                Can I give my ticket to someone else?
             </a>
             <!--ANSWER-->
-            <div class="panel editable"><p>No problem, just <a class="blue" href="mailto:powerup@getup.org.au">email powerup@getup.org.au</a> to update the name and details attached to that ticket so we can ensure the new ticket holder will have an accurate programme.</p></div>
+            <div class="panel editable"><p>No problem,&nbsp;<a class="blue" href="mailto:powerup@getup.org.au">email powerup@getup.org.au</a> to update the name and details attached to that ticket so we can ensure the new ticket holder will have an accurate programme.</p></div>
 
             <div class="faq-underline"></div>
 
