Updated 'faqs.html' via CloudCannon

--- a/faqs.html
+++ b/faqs.html
@@ -271,14 +271,7 @@ Perhaps most importantly, you’ll build meaningful connections with other atten
                 Will there be much walking required during PowerUp?
             </a>
             <!--ANSWER-->
-            <div class="panel editable">
-                <p>
-                    Over the course of the weekend, workshops and seminars will be held in various break-out spaces on campus. We are working with UNSW staff to ensure that workshop and seminar spaces are as close as possible to Sir John Clancy Auditorium. We aim to keep walking to a minimum!
-                </p>
-                 <p>
-                    PowerUp will provide you with comprehensive maps in your welcome packs to help with getting around. There will also be ample signage as well as volunteer staff to offer directional assistance throughout the conference.
-                </p>
-            </div>
+            <div class="panel editable"><p>Over the course of the weekend, workshops and seminars will be held in various break-out spaces on campus. We are working with UNSW staff to ensure that workshop and seminar spaces are as close as possible to Sir John Clancy Auditorium. We aim to keep walking to a minimum!</p><p>PowerUp will provide you with comprehensive maps in your programme to help with getting around. There will also be ample signage as well as volunteer staff to offer directional assistance throughout the conference.</p></div>
             
             <div class="faq-underline"></div>
             
