--- a/program2.html
+++ b/program2.html
@@ -29,8 +29,12 @@ description: PowerUp
 			<span class="reverse-skew black-container reverse">
 				<div>
 				<img src="../images/icons/Create.svg" class="x-icon">
-				<h2> <span class="dotted-underline editable"> Programs </span></h2>
-					<p>PowerUp will focus on practical skill-building, provide interactive, engaging spaces and give you maximum opportunity to connect with other attendees. It’s a unique experience appropriate for all levels of experience. </p>
+				<h2> <span class="dotted-underline editable"> What’s in store </span></h2>
+					<p>
+						 Curious about what skills you’ll pick up at PowerUp? Listed below are the keynote plenaries, practical skills workshops
+						and seminars you’ll attend over the course of the weekend. Don’t worry about remembering it all, you’ll receive your
+						very own personalised timetable at the beginning of the PowerUp weekend.
+					</p>
 				</div>
 
 				
@@ -45,10 +49,9 @@ description: PowerUp
 
 
 <div class="row">
-	<div class="small-3 columns" style="position: absolute; z-index: 5;">
+	<div class="small-3 columns" style="position: absolute; z-index: 5; ">
 		<div class="nav__side__container" >
 			<ul class="nav__side">
-				<li><a href="#p-overview" class="nav__side__link active">Overview</a></li>
 				<li><a href="#p-plenaries" class="nav__side__link">Plenaries</a></li>
 				<li><a href="#p-workshops" class="nav__side__link">Workshops</a></li>
 				<li><a href="#p-seminars" class="nav__side__link">Seminars</a></li>
@@ -64,7 +67,6 @@ description: PowerUp
 			<span></span>
 			<ul id="menu">
 				<li> <b style="opacity:0.5">PROGRAMS </b></li>
-				<li><a href="#p-overview" class="nav__side__link">Overview</a></li>
 				<li><a href="#p-plenaries" class="nav__side__link">Plenaries</a></li>
 				<li><a href="#p-workshops" class="nav__side__link">Workshops</a></li>
 				<li><a href="#p-seminars" class="nav__side__link">Seminars</a></li>
@@ -77,20 +79,10 @@ description: PowerUp
 </div>
 
 <div class="_content">
-	<section id="p-overview">
-		<div class="row" id="p-overview">
-			<div class="small-12 medium-9 medium-offset-3 columns">
-					<h1 class="white"> Overview </h1>
-					<p class="white">Curious about what skills you’ll pick up at PowerUp? Listed below are the keynote plenaries, practical skills workshops and
-					seminars you’ll attend over the course of the weekend. Don’t worry about remembering it all, you’ll receive your very
-					own personalised timetable at the beginning of the PowerUp weekend.</p>
-			</div>
-		</div>
-	</section>
 
 	<section id="p-plenaries">
-		<div class="x-img-container speakers-hero programs-hero programs-img-only">
-			<div class="x-home__image-container">
+		<div class="x-img-container speakers-hero programs-hero programs-img-only " style="padding:0" >
+			<div class="x-home__image-container gradient" style="padding-top: 20px;">
 				<img src="../images/sunday-people.jpg" class="x-speaker-image">
 				<div class="programs-blue-bg">
 					<div class="row reverse-skew">
@@ -115,7 +107,7 @@ description: PowerUp
 
 				<div class="schedule-container">
 					<div class="schedule-heading-container">
-						<img src="../images/icons/calendar.svg" class="schedule-icon">
+						<img src="../images/icons/powerup-plan.svg" class="other-icon">
 						<h3 class="slab white"> The PowerUp Plan </h3>
 					</div>
 					<p class="white">  We’ll start the weekend off with a bang with MCs Julian Morrow, Charles Firth and Ben Jenkins from comedy team The Chaser.
@@ -125,13 +117,14 @@ description: PowerUp
 						</p>
 					<div class="spacer"></div>
 					<div class="schedule-heading-container">
-						<img src="../images/icons/calendar.svg" class="schedule-icon">
-						<h3 class="slab white"> The PowerUp Plan </h3>
+						<img src="../images/icons/secret-weapon.svg" class="other-icon">
+						<h3 class="slab white"> Our Secret Weapon </h3>
 					</div>
-					<p class="white">  We’ll start the weekend off with a bang with MCs Julian Morrow, Charles Firth and Ben Jenkins from comedy team The Chaser.
-					We’ll then get stuck into GetUp’s vision for Australia and the plan to scale up our power by embracing an entirely new
-					model of organising for our movement. Becky Bond, Senior Advisor on the Bernie Sanders’ Election Campaign, will take us
-					through the Big Organising model she helped to pioneer in the U.S., and how it transformed the political status quo.
+					<p class="white">  GetUp has a secret weapon that political influence and money can’t buy. It’s a community calling program that’s already
+					ousted two MPs, reduced the margins of others to a sliver, and persuaded marginal Coalition MPs to come out against
+					a billion dollar loan to coal miner Adani. Learn the history, strategy and inspirational stories behind this game-changing
+					tactic and how we can radically redefine the politically possible.
+
 						</p>
 				</div>
 
@@ -146,7 +139,7 @@ description: PowerUp
 
 				<div class="schedule-container">
 					<div class="schedule-heading-container">
-						<img src="../images/icons/calendar.svg" class="schedule-icon">
+						<img src="../images/icons/state-of-the-nation.svg" class="other-icon">
 						<h3 class="slab white"> State of the Nation & the World </h3>
 					</div>
 					<p class="white"> You’ve read the news and heard the sound bites, but what’s really at the root of the shifts we’re seeing around the world?
@@ -160,7 +153,7 @@ description: PowerUp
 					</p>
 					<div class="spacer"></div>
 					<div class="schedule-heading-container">
-						<img src="../images/icons/calendar.svg" class="schedule-icon">
+						<img src="../images/icons/action-group-breakout.svg" class="other-icon">
 						<h3 class="slab white"> Action Group Breakout </h3>
 					</div>
 					<p class="white"> This is a chance to break away with other members from your electorate and make a plan for post-PowerUp. With the help of
@@ -169,7 +162,7 @@ description: PowerUp
 					</p>
 					<div class="spacer"></div>
 					<div class="schedule-heading-container">
-						<img src="../images/icons/calendar.svg" class="schedule-icon">
+						<img src="../images/icons/just-the-beginning.svg" class="other-icon">
 						<h3 class="slab white"> Just the Beginning </h3>
 					</div>
 					<p class="white"> PowerUp is just the beginning. In the weekend’s closing plenary, we’ll walk through concrete next steps upon returning to
@@ -206,7 +199,7 @@ description: PowerUp
 
 				<div class="schedule-container">
 					<div class="schedule-heading-container">
-						<img src="../images/icons/calendar.svg" class="schedule-icon">
+						<img src="../images/icons/just-the-beginning.svg" class="other-icon">
 						<h3 class="slab white"> Strategy and Power </h3>
 					</div>
 					<p class="white"> Achieving change on the issues we care about doesn’t happen by accident. It takes planning and strategic decision-making
@@ -216,7 +209,7 @@ description: PowerUp
 					</p>
 					<div class="spacer"></div>
 					<div class="schedule-heading-container">
-						<img src="../images/icons/calendar.svg" class="schedule-icon">
+						<img src="../images/icons/powerful-conversations.svg" class="other-icon">
 						<h3 class="slab white"> Powerful Conversations </h3>
 					</div>
 					<p class="white"> One-to-one conversations are the backbone of a successful campaign – whether that’s through door-knocking, stalls, phone
@@ -225,7 +218,7 @@ description: PowerUp
 					</p>
 					<div class="spacer"></div>
 					<div class="schedule-heading-container">
-						<img src="../images/icons/calendar.svg" class="schedule-icon">
+						<img src="../images/icons/action-group-breakout.svg" class="other-icon">
 						<h3 class="slab white"> Building an Inclusive Group </h3>
 					</div>
 					<p class="white"> GetUp is fighting for a fair and inclusive Australia. To achieve this, we need to build a GetUp movement where everyone is
@@ -234,7 +227,7 @@ description: PowerUp
 					</p>
 					<div class="spacer"></div>
 					<div class="schedule-heading-container">
-						<img src="../images/icons/calendar.svg" class="schedule-icon">
+						<img src="../images/icons/state-of-the-nation.svg" class="other-icon">
 						<h3 class="slab white"> Making Meetings Magic </h3>
 					</div>
 					<p class="white"> Meetings are where people work together to make collective decisions and, most importantly, plan for action. Put simply:
@@ -268,32 +261,31 @@ description: PowerUp
 
 				<div class="schedule-container">
 					<div class="schedule-heading-container">
-						<img src="../images/icons/calendar.svg" class="schedule-icon">
-						<h3 class="slab white"> Strategy and Power </h3>
+						<h3 class="slab white no-icon"> Behind the Scenes: People-Powered Campaigns </h3>
 					</div>
-					<p class="white"> Achieving change on the issues we care about doesn’t happen by accident. It takes planning and strategic decision-making
-						so that when we act together, we have the greatest possible impact. This workshop dives into the key elements of successful
-						campaigns, helps you make sense of GetUp’s current and future campaign plans and provides you with skills to make strategic
-						campaign decisions in your local context.
+					<p class="white"> A panel of Australia’s most exciting community organisers will share the strategies behind campaigns that have redefined
+					what’s possible on issues ranging from coal seam gas, climate change and electoral organising. This seminar will focus
+					on the tactics, structures and tools that underpin successful grassroots campaigns — in particular, the power of persuasive
+					conversations and effective local groups — and the diversity of people in frontline communities fighting for our issues.
 					</p>
 					<div class="spacer"></div>
 					<div class="schedule-heading-container">
-						<img src="../images/icons/calendar.svg" class="schedule-icon">
-						<h3 class="slab white"> Powerful Conversations </h3>
+						<h3 class="slab white no-icon"> Recipe for an Action Group </h3>
 					</div>
-					<p class="white"> One-to-one conversations are the backbone of a successful campaign – whether that’s through door-knocking, stalls, phone
-						calls, or with family and friends. In this workshop you will be introduced to a framework for persuasive conversations
-						that’ll help you engage with people’s values and concerns, shift their perspective and move them to action.
+					<p class="white"> You’ll explore the plan to build a national network of GetUp Action Groups in a seminar facilitated by members who’ve been
+					leading the first pilot groups over the last 6 months. You’ll learn about the systems, processes and tactics they’ve
+					pioneered and the challenges and opportunities involved in establishing a local Action Group. These Action Group leaders
+					will talk you through how groups can function effectively, stay impact-focused and operate under a national strategy.
 					</p>
 				</div>
 			</div>
 		</div>
 	</section>
 	<section id="p-sat-social">
-		<div class="x-img-container speakers-hero programs-hero programs-img-only">
+		<div class="x-img-container speakers-hero programs-hero programs-img-only" style="margin-bottom: -60px;">
 			<div class="x-home__image-container">
 				<img src="../images/sunday-people.jpg" class="x-speaker-image">
-				<div class="programs-blue-bg">
+				<div class="programs-blue-bg" style="padding-bottom: 60px;">
 					<div class="row reverse-skew">
 						<div class="small-12 medium-9 medium-offset-3 columns">
 							<h1 class="white"  id="p-sat-social"> Saturday Night Social </h1>
@@ -314,58 +306,65 @@ description: PowerUp
 
 $(document).ready(function(){
 
-	// DESKTOP NAV BAR HIGHLIGHT
-	var navChildren = $(".nav__side li").children();
-	var aArray = [];
-	for (var i = 0; i < navChildren.length; i++) {
-		var aChild = navChildren[i];
-		var ahref = $(aChild).attr('href');
-		aArray.push(ahref);
-	}
-	$(window).scroll(function () {
-		var windowPos = $(window).scrollTop();
-		var windowHeight = $(window).height();
-		var docHeight = $(document).height();
-		for (var i = 0; i < aArray.length; i++) {
-			var theID = aArray[i];
-			var secPosition = $(theID).offset().top;
-			secPosition = secPosition - 135;
-			var divHeight = $(theID).height();
-			divHeight = divHeight;
-			if (windowPos >= secPosition && windowPos < (secPosition + divHeight)) {
-				$("a[href='" + theID + "']").parent().addClass("active");
-			} else {
-				$("a[href='" + theID + "']").parent().removeClass("active");
+	
+	$(window).resize(function() {
+		if ($(this).width() < 700) {
+			// MOBILE NAV BAR HIGHLIGHT
+			var m_navChildren = $("#menu li").children();
+			var m_aArray = [];
+			for (var i = 0; i < m_navChildren.length; i++) {
+				var m_aChild = m_navChildren[i];
+				var m_ahref = $(m_aChild).attr('href');
+				m_aArray.push(m_ahref);
 			}
-		}
-	});
-
-	// MOBILE NAV BAR HIGHLIGHT
-	var m_navChildren = $("#menu li").children();
-	var m_aArray = [];
-	for (var i = 0; i < m_navChildren.length; i++) {
-		var m_aChild = m_navChildren[i];
-		var m_ahref = $(m_aChild).attr('href');
-		m_aArray.push(m_ahref);
-	}
-	$(window).scroll(function () {
-		var m_windowPos = $(window).scrollTop();
-		var m_windowHeight = $(window).height();
-		var m_docHeight = $(document).height();
-		for (var i = 0; i < m_aArray.length; i++) {
-			var m_theID = m_aArray[i];
-			var m_secPosition = $(m_theID).offset().top;
-			m_secPosition = m_secPosition - 135;
-			var m_divHeight = $(m_theID).height();
-			m_divHeight = m_divHeight;
-			if (m_windowPos >= m_secPosition && m_windowPos < (m_secPosition + m_divHeight)) {
-				$("a[href='" + m_theID + "']").parent().addClass("active");
-			} else {
-				$("a[href='" + m_theID + "']").parent().removeClass("active");
+			$(window).scroll(function () {
+				var m_windowPos = $(window).scrollTop();
+				var m_windowHeight = $(window).height();
+				var m_docHeight = $(document).height();
+				for (var i = 0; i < m_aArray.length; i++) {
+					var m_theID = m_aArray[i];
+					var m_secPosition = $(m_theID).offset().top;
+					m_secPosition = m_secPosition - 135;
+					var m_divHeight = $(m_theID).height();
+					m_divHeight = m_divHeight;
+					if (m_windowPos >= m_secPosition && m_windowPos < (m_secPosition + m_divHeight)) {
+						$("a[href='" + m_theID + "']").parent().addClass("active");
+					} else {
+						$("a[href='" + m_theID + "']").parent().removeClass("active");
+					}
+				}
+			});
+		} else {
+			// DESKTOP NAV BAR HIGHLIGHT
+			var navChildren = $(".nav__side li").children();
+			var aArray = [];
+			for (var i = 0; i < navChildren.length; i++) {
+				var aChild = navChildren[i];
+				var ahref = $(aChild).attr('href');
+				aArray.push(ahref);
 			}
+			$(window).scroll(function () {
+				var windowPos = $(window).scrollTop();
+				var windowHeight = $(window).height();
+				var docHeight = $(document).height();
+				for (var i = 0; i < aArray.length; i++) {
+					var theID = aArray[i];
+					var secPosition = $(theID).offset().top;
+					secPosition = secPosition - 135;
+					var divHeight = $(theID).height();
+					divHeight = divHeight;
+					if (windowPos >= secPosition && windowPos < (secPosition + divHeight)) {
+						$("a[href='" + theID + "']").parent().addClass("active");
+					} else {
+						$("a[href='" + theID + "']").parent().removeClass("active");
+					}
+				}
+			});
 		}
 	});
   
+
+//   STICKY
   // Even when the window is resized, run this code.
   $(window).resize(function(){
     // Variables
@@ -390,8 +389,12 @@ $(document).ready(function(){
         $('#menuToggle').removeClass('sticky-no-pad');
       }
     });
-
   }).resize();
+
+//   STICKY END
+
+
+
 
   $('.nav__side__link').click(function(){
 	if ($('.nav__side__link').hasClass('active') ){
