--- a/program2.html
+++ b/program2.html
@@ -30,7 +30,7 @@ description: PowerUp
 				<div>
 				<img src="../images/icons/Create.svg" class="x-icon">
 				<h2> <span class="dotted-underline editable"> What’s in store </span></h2>
-					<p>
+					<p class="editable">
 						 Curious about what skills you’ll pick up at PowerUp? Listed below are the keynote plenaries, practical skills workshops
 						and seminars you’ll attend over the course of the weekend. Don’t worry about remembering it all, you’ll receive your
 						very own personalised timetable at the beginning of the PowerUp weekend.
@@ -52,10 +52,10 @@ description: PowerUp
 	<div class="small-3 columns" style="position: absolute; z-index: 5; ">
 		<div class="nav__side__container" >
 			<ul class="nav__side">
-				<li><a href="#p-plenaries" class="nav__side__link">Plenaries</a></li>
-				<li><a href="#p-workshops" class="nav__side__link">Workshops</a></li>
-				<li><a href="#p-seminars" class="nav__side__link">Seminars</a></li>
-				<li><a href="#p-sat-social" class="nav__side__link">Saturday Social</a></li>
+				<li><a href="#p-plenaries" class="nav__side__link editable">Plenaries</a></li>
+				<li><a href="#p-workshops" class="nav__side__link editable">Workshops</a></li>
+				<li><a href="#p-seminars" class="nav__side__link editable">Seminars</a></li>
+				<li><a href="#p-sat-social" class="nav__side__link editable">Saturday Social</a></li>
 			</ul>
 		</div>
 
@@ -67,10 +67,10 @@ description: PowerUp
 			<span></span>
 			<ul id="menu">
 				<li> <b style="opacity:0.5">PROGRAMS </b></li>
-				<li><a href="#p-plenaries" class="nav__side__link">Plenaries</a></li>
-				<li><a href="#p-workshops" class="nav__side__link">Workshops</a></li>
-				<li><a href="#p-seminars" class="nav__side__link">Seminars</a></li>
-				<li><a href="#p-sat-social" class="nav__side__link">Saturday Social</a></li>
+				<li><a href="#p-plenaries" class="nav__side__link editable">Plenaries</a></li>
+				<li><a href="#p-workshops" class="nav__side__link editable">Workshops</a></li>
+				<li><a href="#p-seminars" class="nav__side__link editable">Seminars</a></li>
+				<li><a href="#p-sat-social" class="nav__side__link editable">Saturday Social</a></li>
 				
 			</ul>
 		</div>
@@ -83,13 +83,12 @@ description: PowerUp
 	<section id="p-plenaries">
 		<div class="x-img-container speakers-hero programs-hero programs-img-only " style="padding:0" >
 			<div class="x-home__image-container gradient" style="padding-top: 20px;">
-				<img src="../images/sunday-people.jpg" class="x-speaker-image">
 				<div class="programs-blue-bg">
 					<div class="row reverse-skew">
 						<div class="small-12 medium-9 medium-offset-3 columns">
-							<h1 class="white" id="p-plenaries"> Plenaries </h1>
-							<p class="white">Over the course of the weekend, attendees will attend all plenaries listed below.
-		</p>
+							<h1 class="white editable pad-top" id="p-plenaries"> Plenaries </h1>
+							<p class="white editable">Over the course of the weekend, attendees will attend all plenaries listed below.
+							</p>
 						</div>
 					</div>
 				</div>
@@ -101,26 +100,26 @@ description: PowerUp
 
 				<!-- SATURDAY -->
 				<div class="day-container">
-					<img src="../images/icons/calendar.svg" class="day-icon">
-					<h4 class="day-text slab"> SATURDAY </h4>
+					<img src="../images/icons/calendar.svg" class="day-icon editable">
+					<h4 class="day-text slab editable"> SATURDAY </h4>
 				</div>
 
 				<div class="schedule-container">
 					<div class="schedule-heading-container">
-						<img src="../images/icons/powerup-plan.svg" class="other-icon">
-						<h3 class="slab white"> The PowerUp Plan </h3>
+						<img src="../images/icons/powerup-plan.svg" class="other-icon editable">
+						<h3 class="slab white editable"> The PowerUp Plan </h3>
 					</div>
-					<p class="white">  We’ll start the weekend off with a bang with MCs Julian Morrow, Charles Firth and Ben Jenkins from comedy team The Chaser.
+					<p class="white editable">  We’ll start the weekend off with a bang with MCs Julian Morrow, Charles Firth and Ben Jenkins from comedy team The Chaser.
 					We’ll then get stuck into GetUp’s vision for Australia and the plan to scale up our power by embracing an entirely new
 					model of organising for our movement. Becky Bond, Senior Advisor on the Bernie Sanders’ Election Campaign, will take us
 					through the Big Organising model she helped to pioneer in the U.S., and how it transformed the political status quo.
 						</p>
 					<div class="spacer"></div>
 					<div class="schedule-heading-container">
-						<img src="../images/icons/secret-weapon.svg" class="other-icon">
-						<h3 class="slab white"> Our Secret Weapon </h3>
+						<img src="../images/icons/secret-weapon.svg" class="other-icon editable">
+						<h3 class="slab white editable"> The Persuasion Project </h3>
 					</div>
-					<p class="white">  GetUp has a secret weapon that political influence and money can’t buy. It’s a community calling program that’s already
+					<p class="white editable">  GetUp has a secret weapon that political influence and money can’t buy. It’s a community calling program that’s already
 					ousted two MPs, reduced the margins of others to a sliver, and persuaded marginal Coalition MPs to come out against
 					a billion dollar loan to coal miner Adani. Learn the history, strategy and inspirational stories behind this game-changing
 					tactic and how we can radically redefine the politically possible.
@@ -132,17 +131,17 @@ description: PowerUp
 				<div class="spacer"></div>
 				<!-- SUNDAY -->
 				<div class="day-container">
-					<img src="../images/icons/calendar.svg" class="day-icon">
-					<h4 class="day-text slab"> SUNDAY </h4>
+					<img src="../images/icons/calendar.svg" class="day-icon editable">
+					<h4 class="day-text slab editable"> SUNDAY </h4>
 				</div>
 
 
 				<div class="schedule-container">
 					<div class="schedule-heading-container">
-						<img src="../images/icons/state-of-the-nation.svg" class="other-icon">
-						<h3 class="slab white"> State of the Nation & the World </h3>
+						<img src="../images/icons/state-of-the-nation.svg" class="other-icon editable">
+						<h3 class="slab white editable"> State of the Nation & the World </h3>
 					</div>
-					<p class="white"> You’ve read the news and heard the sound bites, but what’s really at the root of the shifts we’re seeing around the world?
+					<p class="white editable"> You’ve read the news and heard the sound bites, but what’s really at the root of the shifts we’re seeing around the world?
 					ACTU Secretary Sally McManus will lead a discussion with GetUp Campaign Directors about what’s on the line and how GetUp
 					members are positioned to play a pivotal role in moving Australia in the right (or left) direction.
 					<br><br>
@@ -153,19 +152,19 @@ description: PowerUp
 					</p>
 					<div class="spacer"></div>
 					<div class="schedule-heading-container">
-						<img src="../images/icons/action-group-breakout.svg" class="other-icon">
-						<h3 class="slab white"> Action Group Breakout </h3>
+						<img src="../images/icons/action-group-breakout.svg" class="other-icon editable">
+						<h3 class="slab white editable"> Action Group Breakout </h3>
 					</div>
-					<p class="white"> This is a chance to break away with other members from your electorate and make a plan for post-PowerUp. With the help of
+					<p class="white editable"> This is a chance to break away with other members from your electorate and make a plan for post-PowerUp. With the help of
 					a coordinating local member, you’ll discuss GetUp’s national plan within your local context, and how to start or join
 					an Action Group to take action with moving forward.
 					</p>
 					<div class="spacer"></div>
 					<div class="schedule-heading-container">
-						<img src="../images/icons/just-the-beginning.svg" class="other-icon">
-						<h3 class="slab white"> Just the Beginning </h3>
+						<img src="../images/icons/just-the-beginning.svg" class="other-icon editable">
+						<h3 class="slab white editable"> Just the Beginning </h3>
 					</div>
-					<p class="white"> PowerUp is just the beginning. In the weekend’s closing plenary, we’ll walk through concrete next steps upon returning to
+					<p class="white editable"> PowerUp is just the beginning. In the weekend’s closing plenary, we’ll walk through concrete next steps upon returning to
 					our electorates, how to start and join local Action Groups, and the role of local organising looking towards a 2018 federal
 					election. There will be an opportunity to reflect on what we’ve learnt and the connections we’ve made, and celebrate the
 					incredible community we’re building.
@@ -185,8 +184,8 @@ description: PowerUp
 				<div class="programs-blue-bg">
 					<div class="row reverse-skew">
 						<div class="small-12 medium-9 medium-offset-3 columns">
-							<h1 class="white"> Skills Workshop </h1>
-							<p class="white">Over the course of the weekend members will attend all four of the workshops listed below.</p>
+							<h1 class="white editable"> Skills Workshop </h1>
+							<p class="white editable">Over the course of the weekend members will attend all four of the workshops listed below.</p>
 						</div>
 					</div>
 				</div>
@@ -199,10 +198,10 @@ description: PowerUp
 
 				<div class="schedule-container">
 					<div class="schedule-heading-container">
-						<img src="../images/icons/just-the-beginning.svg" class="other-icon">
-						<h3 class="slab white"> Strategy and Power </h3>
+						<img src="../images/icons/just-the-beginning.svg" class="other-icon editable">
+						<h3 class="slab white editable"> Strategy and Power </h3>
 					</div>
-					<p class="white"> Achieving change on the issues we care about doesn’t happen by accident. It takes planning and strategic decision-making
+					<p class="white editable"> Achieving change on the issues we care about doesn’t happen by accident. It takes planning and strategic decision-making
 					so that when we act together, we have the greatest possible impact. This workshop dives into the key elements of successful
 					campaigns, helps you make sense of GetUp’s current and future campaign plans and provides you with skills to make strategic
 					campaign decisions in your local context.
@@ -210,27 +209,27 @@ description: PowerUp
 					<div class="spacer"></div>
 					<div class="schedule-heading-container">
 						<img src="../images/icons/powerful-conversations.svg" class="other-icon">
-						<h3 class="slab white"> Powerful Conversations </h3>
+						<h3 class="slab white editable"> Powerful Conversations </h3>
 					</div>
-					<p class="white"> One-to-one conversations are the backbone of a successful campaign – whether that’s through door-knocking, stalls, phone
+					<p class="white editable"> One-to-one conversations are the backbone of a successful campaign – whether that’s through door-knocking, stalls, phone
 					calls, or with family and friends. In this workshop you will be introduced to a framework for persuasive conversations
 					that’ll help you engage with people’s values and concerns, shift their perspective and move them to action.
 					</p>
 					<div class="spacer"></div>
 					<div class="schedule-heading-container">
 						<img src="../images/icons/action-group-breakout.svg" class="other-icon">
-						<h3 class="slab white"> Building an Inclusive Group </h3>
+						<h3 class="slab white editable"> Building an Inclusive Group </h3>
 					</div>
-					<p class="white"> GetUp is fighting for a fair and inclusive Australia. To achieve this, we need to build a GetUp movement where everyone is
+					<p class="white editable"> GetUp is fighting for a fair and inclusive Australia. To achieve this, we need to build a GetUp movement where everyone is
 					welcome. In this workshop we’ll explore the values that drive our work and how we can bring them to life in groups.
 
 					</p>
 					<div class="spacer"></div>
 					<div class="schedule-heading-container">
-						<img src="../images/icons/state-of-the-nation.svg" class="other-icon">
-						<h3 class="slab white"> Making Meetings Magic </h3>
+						<img src="../images/icons/state-of-the-nation.svg" class="other-icon editable">
+						<h3 class="slab white editable"> Making Meetings Magic </h3>
 					</div>
-					<p class="white"> Meetings are where people work together to make collective decisions and, most importantly, plan for action. Put simply:
+					<p class="white editable"> Meetings are where people work together to make collective decisions and, most importantly, plan for action. Put simply:
 					meetings are where the magic happens in groups, and getting meetings right is essential to having the impact we want in
 					the world. Come along to learn how to make meetings effective and explore what good facilitation looks like.
 					</p>
@@ -247,8 +246,8 @@ description: PowerUp
 				<div class="programs-blue-bg">
 					<div class="row reverse-skew">
 						<div class="small-12 medium-9 medium-offset-3 columns">
-							<h1 class="white"> Seminars </h1>
-							<p class="white">Over the course of the weekend members will attend one of the two seminars listed below.</p>
+							<h1 class="white editable"> Seminars </h1>
+							<p class="white editable">Over the course of the weekend members will attend one of the two seminars listed below.</p>
 						</div>
 					</div>
 				</div>
@@ -261,18 +260,18 @@ description: PowerUp
 
 				<div class="schedule-container">
 					<div class="schedule-heading-container">
-						<h3 class="slab white no-icon"> Behind the Scenes: People-Powered Campaigns </h3>
+						<h3 class="slab white no-icon editable"> Behind the Scenes: People-Powered Campaigns </h3>
 					</div>
-					<p class="white"> A panel of Australia’s most exciting community organisers will share the strategies behind campaigns that have redefined
+					<p class="white editable"> A panel of Australia’s most exciting community organisers will share the strategies behind campaigns that have redefined
 					what’s possible on issues ranging from coal seam gas, climate change and electoral organising. This seminar will focus
 					on the tactics, structures and tools that underpin successful grassroots campaigns — in particular, the power of persuasive
 					conversations and effective local groups — and the diversity of people in frontline communities fighting for our issues.
 					</p>
 					<div class="spacer"></div>
 					<div class="schedule-heading-container">
-						<h3 class="slab white no-icon"> Recipe for an Action Group </h3>
+						<h3 class="slab white no-icon editable"> Recipe for an Action Group </h3>
 					</div>
-					<p class="white"> You’ll explore the plan to build a national network of GetUp Action Groups in a seminar facilitated by members who’ve been
+					<p class="white editable"> You’ll explore the plan to build a national network of GetUp Action Groups in a seminar facilitated by members who’ve been
 					leading the first pilot groups over the last 6 months. You’ll learn about the systems, processes and tactics they’ve
 					pioneered and the challenges and opportunities involved in establishing a local Action Group. These Action Group leaders
 					will talk you through how groups can function effectively, stay impact-focused and operate under a national strategy.
@@ -288,8 +287,8 @@ description: PowerUp
 				<div class="programs-blue-bg" style="padding-bottom: 60px;">
 					<div class="row reverse-skew">
 						<div class="small-12 medium-9 medium-offset-3 columns">
-							<h1 class="white"  id="p-sat-social"> Saturday Night Social </h1>
-							<p class="white">Keen for a drink and wind-down after the first day of PowerUp? Join us at The Pavilions, located just a few metres behind
+							<h1 class="white editable" id="p-sat-social"> Saturday Night Social </h1>
+							<p class="white editable">Keen for a drink and wind-down after the first day of PowerUp? Join us at The Pavilions, located just a few metres behind
 							Sir John Clancy Auditorium at 6-8pm, straight after the closing plenary on Saturday. They will be a special address,
 							drinks and nibbles, and ample time to socialise before heading home for some much needed rest for day two.</p>
 						</div>
@@ -310,6 +309,7 @@ $(document).ready(function(){
 	$(window).resize(function() {
 		if ($(this).width() < 700) {
 			// MOBILE NAV BAR HIGHLIGHT
+			
 			var m_navChildren = $("#menu li").children();
 			var m_aArray = [];
 			for (var i = 0; i < m_navChildren.length; i++) {
@@ -406,7 +406,6 @@ $(document).ready(function(){
 
   $('#menu li').click(function() {
 	 $('#checkbox').prop('checked', false);
-	 console.log("skdfj");
   });
 
 
